<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="activity_landing">Weather Forecast</string>
    <string name="activity_multiple_places">Weather</string>

    <string name="weather_icon">weather icon</string>
    <string name="fetching_weather">fetching weather…</string>
    <string name="connect_to_internet">Please connect to Internet</string>
    <string name="unable_to_fetch_location">Unable to fetch location</string>
    <string name="no_places_found">No places found, select different set of places</string>
    <string name="no_location_permission_granted">No location permission granted</string>

    <string name="api_key">AIzaSyCPszcZL6wLK98YZZgAYHGGVA-R41MCRj8</string>
    <string name="multiple_places">Multiple Places &#10132;</string>
    <string name="add_place"> &#43; Add Place</string>
    <string name="city_forecast">%1s forecast for 5 days</string>
    <string name="time">time</string>
    <string name="icon">icon</string>
    <string name="condition">cond</string>
    <string name="description">description</string>
    <string name="min">min\n(&#xb0;c)</string>
    <string name="max">max\n(&#xb0;c)</string>
    <string name="wind">wind\n(m/s)</string>
    <string name="city">city</string>
    <string name="tap_on_to_add_place">Tap on \'&#43; Add Place\' to add place</string>
    <string name="fetch_weather">Fetch Weather</string>
</resources>
