<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/dimen_16dp"
    android:layout_marginBottom="@dimen/dimen_16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/timeLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintEnd_toStartOf="@id/weatherImageView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        tools:src="@mipmap/ic_launcher"
        android:text="@string/icon"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintEnd_toStartOf="@id/descriptionLabelTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/timeLabelTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        app:layout_constraintEnd_toStartOf="@id/minTemperatureLabelTextView"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/weatherImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minTemperatureLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintEnd_toStartOf="@id/maxLabelTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/descriptionLabelTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/maxLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/max"
        app:layout_constraintEnd_toStartOf="@id/windSpeedLabelTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/minTemperatureLabelTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/windSpeedLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/maxLabelTextView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>