<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_8dp"
    android:paddingEnd="@dimen/dimen_8dp">

    <TextView
        android:id="@+id/dateTimeTextView"
        style="@style/DateHeaderStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Date 1" />

    <View
        android:id="@+id/horizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateTimeTextView" />

    <TextView
        android:id="@+id/timeLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/time"
        app:layout_constraintEnd_toStartOf="@id/iconLabelTextView"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

    <TextView
        android:id="@+id/iconLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/condition"
        app:layout_constraintEnd_toStartOf="@id/descriptionLabelTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/timeLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

    <TextView
        android:id="@+id/descriptionLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/description"
        app:layout_constraintEnd_toStartOf="@id/minTemperatureLabelTextView"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/iconLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

    <TextView
        android:id="@+id/minTemperatureLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/min"
        app:layout_constraintEnd_toStartOf="@id/maxLabelTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/descriptionLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

    <TextView
        android:id="@+id/maxLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/max"
        app:layout_constraintEnd_toStartOf="@id/windSpeedLabelTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/minTemperatureLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

    <TextView
        android:id="@+id/windSpeedLabelTextView"
        style="@style/ClimateLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/wind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/maxLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

</androidx.constraintlayout.widget.ConstraintLayout>