<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forecast.LandingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/dimen_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/activity_landing" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        tools:text="@string/city_forecast"
        android:padding="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/weatherByDayRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weatherByDayRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityTextView" />

    <FrameLayout
        android:id="@+id/loaderFrameLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ProgressBar
            android:id="@+id/progressBar"
            android:foregroundTint="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_64dp"
            android:text="@string/fetching_weather" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>